@@ -35,6 +35,11 @@
    - stevesk@cvs.openbsd.org 2001/11/29 19:06:39
      [channels.h]
      remove dead function prototype; ok markus@
+   - markus@cvs.openbsd.org 2001/11/29 22:08:48
+     [auth-rsa.c]
+     fix protocol error: send 'failed' message instead of a 2nd challenge
+     (happens if the same key is in authorized_keys twice).
+     reported Ralf_Meister@genua.de; ok djm@
 
 20011126
  - (tim) [contrib/cygwin/README, openbsd-compat/bsd-cygwin_util.c,
@@ -6957,4 +6962,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1677 2001/12/06 16:49:57 mouring Exp $
+$Id: ChangeLog,v 1.1678 2001/12/06 17:41:25 mouring Exp $
